--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,15 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Practical Test 1 Var 2"
         android:supportsRtl="true"
         android:theme="@style/Theme.PracticalTest01Var03"
         tools:targetApi="31">
+
+        <service
+            android:name=".PracticalTest01Var03Service"
+            android:enabled="true"
+            android:exported="false" />
         <activity
             android:name=".PracticalTest01Var03MainActivity"
             android:exported="true">
@@ -18,6 +23,13 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".PracticalTest01Var03SecondaryActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="ro.pub.cs.systems.eim.practicaltest01var03.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
